...
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WELCOME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9wG-mm-cUx">
                                <rect key="frame" x="45" y="204" width="510" height="24"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                    <constraint firstAttribute="width" constant="46" id="Q0m-sF-S9h"/>
                                </constraints>
                                <state key="normal" title="Reset">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                                <rect key="frame" x="0.0" y="0.0" width="600" height="736"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0-100%" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hG3-Km-erU" customClass="BCITextField" customModule="BRD_Tx_Evaluati
                                                        <rect key="frame" x="15" y="62" width="77" height="30"/>
                                                        <constraints>
...
                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$/lb/head" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8w5-Xf-szd" customClass="BCITextField" customModule="BRD_Tx_Evalu
                                                        <rect key="frame" x="15" y="132" width="97" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$/lb" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oRx-zY-AZu" customClass="BCITextField" customModule="BRD_Tx_Evaluation
                                                        <rect key="frame" x="15" y="199" width="95" height="30"/>
                                                        <constraints>
...
                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="days" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vhw-lK-beb" customClass="BCITextField" customModule="BRD_Tx_Evaluation
                                                        <rect key="frame" x="15" y="338" width="97" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="lb/head/day" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2h4-7w-PsX" customClass="BCITextField" customModule="BRD_Tx_Eva
                                                        <rect key="frame" x="15" y="405" width="97" height="30"/>
                                                        <constraints>
...
                    </view>
                    <navigationItem key="navigationItem" title="Population Parameters" id="TY1-jS-u7I">
                        <barButtonItem key="rightBarButtonItem" title="Next" id="Lax-dg-vnS">
                            <connections>
                                <action selector="nextStepAction" destination="W6b-ne-XnW" id="75U-yZ-LBh"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0-100%" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZhH-8x-VpF" customClass="BCITextField" customModule="BRD_Tx_Evaluation" cust
                                                <rect key="frame" x="15" y="132" width="70" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="tpf"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="70" id="qD7-Xj-bmH"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0-100%" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UUt-qn-Wqy" customClass="BCITextField" customModule="BRD_Tx_Evaluation" cust
                                                <rect key="frame" x="15" y="199" width="70" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="cfr"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0-100%" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qJB-Bb-mef" customClass="BCITextField" customModule="BRD_Tx_Evaluation" cust
                                                <rect key="frame" x="15" y="333" width="70" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="chronic"/>
