...
        textFieldDidEndEditing(adgField)

        // Another Check if any field is blank and all constraints are satisfied
        if morbidity.isBlank || cog.isBlank || price.isBlank || weight.isBlank || cog.isBlank || dof.isBlank || adg.isBlank ||
            !morbidityField.isSatisfied || !costOfGainField.isSatisfied || !arrivalWeightField.isSatisfied ||
            !daysOnFeedField.isSatisfied || !priceReceivedPerSaleField.isSatisfied || !adgField.isSatisfied {
            let alertView = UIAlertController(title: "Error", message: "emptyFields".localized , preferredStyle: .Alert)
            alertView.addAction(UIAlertAction(title: "Okay", style: .Default, handler: nil))
            self.presentViewController(alertView, animated: true, completion: nil)
        } else {
            returnValues()
            self.performSegueWithIdentifier(drug1Segue, sender: self)
        }
    }
...
